--- a/www/index.html
+++ b/www/index.html
@@ -38,5 +38,12 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+        <video src=”video.ogv”
+controls
+autoplay
+poster=”poster.jpg”
+width=”320″ height=”240″>
+<a href=”video.ogv”>Download movie</a>This is shown if no HTML5 video
+</video>
     </body>
 </html>
