--- a/www/index.html
+++ b/www/index.html
@@ -38,9 +38,7 @@
         <script type="text/javascript">
             app.initialize();
         </script>
-        <video src=”video.ogv”
-controls
-autoplay
+        <video src=”video.ogv” controls autoplay
 poster=”poster.jpg”
 width=”320″ height=”240″>
 <a href=”video.ogv”>Download movie</a>This is shown if no HTML5 video
