--- a/www/index.html
+++ b/www/index.html
@@ -38,10 +38,10 @@
         <script type="text/javascript">
             app.initialize();
         </script>
-        <video src="" controls autoplay
+        <video src="http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4 "  controls autoplay
 poster=”poster.jpg”
 width=”320″ height=”240″>
-<a href=”video.ogv”>Download movie</a>This is shown if no HTML5 video
+<a href=” http://download.blender.org/peach/bigbuckbunny_movies/BigBuckBunny_320x180.mp4" >Download movie</a>This is shown if no HTML5 video
 </video>
     </body>
 </html>
